Hasta marcadores (Los marcadores no funcionan todavía)

--- a/src/app/maps/pages/markers-page/markers-page.component.html
+++ b/src/app/maps/pages/markers-page/markers-page.component.html
@@ -1,1 +1,14 @@
-<p>markers-page works!</p>
+<div
+    id="map"
+    #map
+></div>
+
+<ul class="list-group">
+  <li class="list-group-item">
+    Marker 1
+  </li>
+</ul>
+
+<button class="btn btn-primary">
+  + Agregar marcador
+</button>
