--- a/src/app/maps/pages/zoom-range-page/zoom-range-page.component.html
+++ b/src/app/maps/pages/zoom-range-page/zoom-range-page.component.html
@@ -1,1 +1,38 @@
-<p>zoom-range-page works!</p>
+<div
+    id="map"
+    #map
+></div>
+
+<div class="floating-range p-2">
+    <div class="floating-content">
+        <button
+            class="btn btn-primary"
+            (click)="zoomOut()"
+        >
+            -
+        </button>
+
+        <input
+            type="range"
+            class="form-range px-2"
+            min="-2"
+            max="18"
+            [value]='currentZoom'
+            (input)="zoomChanged(zoomInput.value)"
+            #zoomInput
+        >
+
+        <button
+            class="btn btn-primary"
+            (click)="zoomIn()"
+        >
+            +
+        </button>
+    </div>
+
+    <span class="form-label">
+        Zoom: {{ currentZoom | number:'2.2-2'}}
+        <br>
+        Lng,Lat ({{ currentLong | number:'2.4' }}, {{currentLat | number:'2.4'}} )
+    </span>
+</div>
