Terminado, marcadores y propiedades (minimapas)

--- a/src/app/maps/pages/markers-page/markers-page.component.html
+++ b/src/app/maps/pages/markers-page/markers-page.component.html
@@ -4,11 +4,20 @@
 ></div>
 
 <ul class="list-group">
-  <li class="list-group-item">
-    Marker 1
-  </li>
+    <li
+        class="list-group-item"
+        *ngFor="let colorMarker of markers; let i = index "
+        [ngStyle]="{backgroundColor: colorMarker.color }"
+        (click)="flyTo( colorMarker.marker)"
+        (dblclick)="deleteMarker(i)"
+    >
+        Marker {{i+1}}
+    </li>
 </ul>
 
-<button class="btn btn-primary">
-  + Agregar marcador
+<button
+    (click)="createMarker()"
+    class="btn btn-primary"
+>
+    + Agregar marcador
 </button>
