--- a/src/app/maps/pages/properties-page/properties-page.component.html
+++ b/src/app/maps/pages/properties-page/properties-page.component.html
@@ -24,6 +24,9 @@
                 </div>
 
             </div>
+            <div  class="col-4 mb-2">
+              <counter-alone/>
+            </div>
         </div>
     </div>
 </div>
